[project]
name = "lexington_inventory"
version = "0.1.0"
description = "Real-time inventory monitoring, cycle counts, low-stock alerts, and supplier reorder for Lexington / Welchwyse warehouse"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "lexington_inventory"
